hphp/test/zend/good/ext/readline/tests/readline_clear_history_001.php.skipif
<?php if (!extension_loaded("readline")) die("skip"); ?>