hphp/test/zend/bad/ext/standard/tests/strings/bug47842.php.skipif
<?php
if (PHP_INT_MAX < pow(2,31)) die("skip PHP_INT_MAX < 32b\n");
?>